data type change 'string' to 'binary'